--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -292,6 +292,8 @@ block.prog-mats-everything-gun.description = Fires [red]ALL[] bullets in the gam
 block.prog-mats-everything-gun.details = Ilya helped me with the increase damage over time code.\n[red]May or may not crash the game because scriped bullets in other mods can have incompatible custom stuff.
 block.prog-mats-omega-charger.name = [#CE5EE5]Apotheosis Omega Charger
 block.prog-mats-omega-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it an [lime]OMEGA[] boost in power.\nNote: Has diminishing returns.\nSandbox only.
+block.prog-mats-test-turret.name = Test Turret
+block.prog-mats-test-turret.description = Used for testing bullets. Only shows up in the build menu to me (meep) unless you've consoled your way into here or are looking at the mod's content list.\nSandbox only.
 
 block.prog-mats-everything-item-source.name = Omega Item Source
 block.prog-mats-everything-item-source.description = Infinitely outputs all items at once. Sandbox only.
@@ -316,8 +318,8 @@ block.prog-mats-sandbox-wall.description = Protects structures from enemy projec
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
 block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
 
-block.prog-mats-god-factory.name = Death Factory
-block.prog-mats-god-factory.description = Produces Death.\nSandbox only.
+block.prog-mats-god-factory.name = Flarogus Factory
+block.prog-mats-god-factory.description = Produces Flarogus.\nSandbox only.
 block.prog-mats-god-factory.details = godhood.exe
 block.prog-mats-cap-block.name = Unit Cap Increaser
 block.prog-mats-cap-block.description = Increases unit cap.\nSandbox only.
@@ -353,8 +355,9 @@ unit.prog-mats-large-flare.name = Large Signal Flare
 unit.prog-mats-large-flare.description = A large signal flare made of surge alloy. Fired by allures to attract enemy fire.
 unit.prog-mats-large-flare.details = Unobtainable. Only spawned by allures.
 
-unit.prog-mats-god.name = Death
-unit.prog-mats-god.description = A unit with every weapon and ability of every unit in vanilla and every mod enabled slapped onto it.\nSandbox only.
+unit.prog-mats-god.name = Flarogus
+unit.prog-mats-god.description = Every weapon and abillity has been enherited by this unit. Doom approaches.\nSandbox only.
+unit.prog-mats-god.details = sus
 
 
 ## Weather
