Dispel -> Vigilance + (Terrible) Sprite

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -133,8 +133,8 @@ block.prog-mats-gravity.name = Gravity
 block.prog-mats-gravity.description = Fires up to six tractor beams that pulls in air targets, damaging them in the process.
 block.prog-mats-ambrosia.name = Ambrosia
 block.prog-mats-ambrosia.description = Fires healing fields at the closest damaged unit.
-block.prog-mats-dispel.name = Dispel
-block.prog-mats-dispel.description = Damages and destroys incoming projectiles in a field.
+block.prog-mats-dispel.name = Vigilance
+block.prog-mats-dispel.description = Damages and destroys incoming projectiles. Pierces through multiple bullets. Laser projectiles are not targeted.
 ### Modules (Large)
 block.prog-mats-rebound.name = Rebound
 block.prog-mats-rebound.description = Fires circular saws at enemies that boomerang back.
@@ -284,16 +284,17 @@ block.prog-mats-shield-projector.details = It's a square instead of a hexagon be
 
 # Sandbox
 
-block.prog-mats-harbinger.name = [#F3E979]Eviscerator
-block.prog-mats-harbinger.description = I CAST FRICK EVERYTHING IN THAT GENERAL DIRECTION.\nSandbox only.\n[red]Lag warning.
+block.prog-mats-harbinger.name = [#F3E979]Evisceration
+block.prog-mats-harbinger.description = I CAST FRICK EVERYTHING IN THAT GENERAL DIRECTION.\nSandbox only.\n[red]Big lag warning.
 block.prog-mats-harbinger.details = Go to r/Mindustry and search for "The true power of the Duo."
 block.prog-mats-everything-gun.name = Chaos
 block.prog-mats-everything-gun.description = Fires [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy from all the chaos.)
-block.prog-mats-everything-gun.details = Ilya helped me with the increase damage over time code.\n[red]May or may not crash the game because scriped bullets in other mods can have incompatible custom stuff.
+block.prog-mats-everything-gun.details = Ilya helped me with the increase damage over time code.\n[red]May crash the game due to incompatability with scripted bullets from other mods.
 block.prog-mats-omega-charger.name = [#CE5EE5]Apotheosis Omega Charger
 block.prog-mats-omega-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it an [lime]OMEGA[] boost in power.\nNote: Has diminishing returns.\nSandbox only.
 block.prog-mats-test-turret.name = Test Turret
-block.prog-mats-test-turret.description = Used for testing bullets. Only shows up in the build menu to me (meep) unless you've consoled your way into here or are looking at the mod's content list.\nSandbox only.
+block.prog-mats-test-turret.description = Used for testing bullets. Only shows up in the build menu to me (meep) unless you've consoled the buildVisibility.\nIf you're looking at this from the mod's content list, hi.\nSandbox only.
+block.prog-mats-test-turret.details = Literally just an arrow lmao.
 
 block.prog-mats-everything-item-source.name = Omega Item Source
 block.prog-mats-everything-item-source.description = Infinitely outputs all items at once. Sandbox only.
@@ -405,6 +406,8 @@ stat.pm-static-power = {0} power units/second per link
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
 stat.pm-powersecondblock = {0}% power requirement of overdrived blocks
+
+stat.pm-point-defence-pierce = {0}x pierce
 
 stat.pm-fuel = [lightgray]Fuel:
 stat.pm-fuel.input = [stat]{0}[lightgray] added per item
