Eruptor rework, remove Inferno

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,12 +29,10 @@ block.prog-mats-sentry-builder.description = Constructs sentry units that can be
 
 ## Eruptor
 block.prog-mats-flame.name = [crimson]Flame
-block.prog-mats-flame.description = Opens the ground under enemies, blasting them with lava.\n\n[red]Note: Causes fire. [crimson]A lot of fire.
+block.prog-mats-flame.description = Opens the ground under ground enemies, releasing lava.
 block.prog-mats-flame.details = Found in the wreakage of impact0078. Believed to have once been used for terraforming the landscape.\n\nResprite by ThirstyBoi.
 block.prog-mats-blaze.name = [crimson]Blaze
-block.prog-mats-blaze.description = Opens a larger hole in the ground, sprouting out even more lava.\n\n[red]Note: Causes fire. [crimson]A ton of fire.
-block.prog-mats-inferno.name = [crimson]Inferno
-block.prog-mats-inferno.description = Opens holes under every enemy in range to drench everything in lava.\n\n[red]Note: Fire. [crimson]F I R E   E V E R Y W H E R E.
+block.prog-mats-blaze.description = Opens the ground under ground enemies, releasing a lot of lava.
 
 ## Minigun
 block.prog-mats-minigun.name = M-I-nigun
@@ -398,8 +396,6 @@ bar.pm-craft-speed = Craft Speed: {0}%
 bar.pm-totalboost = Total Boost: +{0}%
 
 stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
-
-stat.pm-inferno = Everything in range
 
 stat.pm-static-power = {0} power units/second per link
 
