--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -17,6 +17,10 @@ block.prog-mats-mindron-collider.name = Mindron Collider
 block.prog-mats-mindron-collider.description = Sustains a fusion reaction between titanium and thorium to fuse tenelium. Takes some time to reach peak efficiency.
 block.prog-mats-forge.name = Pyroclast Forge
 block.prog-mats-forge.description = Smelts massive batches of sand, lead, and coal into silicon and metaglass, using pyratite as an additional fuel source. Less fuel is used in hot locations.
+block.prog-mats-module-assembler.name = Module Assembler
+block.prog-mats-module-assembler.description = Constructs modules to be used by modular turret bases.
+block.prog-mats-module-foundry.name = Module Foundry
+block.prog-mats-module-foundry.description = Constructs stronger modules to be used by modular turret bases.
 block.prog-mats-shell-press.name = Missile Shell Constructor
 block.prog-mats-shell-press.description = Builds empty missile shells.
 block.prog-mats-missile-factory.name = Missile Assembler
