--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -378,6 +378,7 @@ status.prog-mats-corvus-19.name = Corvus-19
 status.prog-mats-corvus-19.details = lmao
 status.prog-mats-speed-boost.name = Speed Boost
 status.prog-mats-strength-boost.name = Damage Boost
+status.prog-mats-pinpoint-target.name = Marked
 
 ## Stats and stuff
 
@@ -428,7 +429,6 @@ bullet.pm-flare-health = [stat]{0}[lightgray] health
 bullet.pm-flare-attraction = [stat]{0}[lightgray] simulated health
 bullet.pm-flare-lifetime = [stat]{0}[lightgray] second lifetime
 
-bullet.pm-blackhole-damage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
 bullet.pm-suction-radius = [stat]{0}[lightgray] tile suction radius
 
 bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[lightgray] tiles
@@ -438,12 +438,14 @@ bullet.pm-sentry-spawn = [lightgray]Spawns
 
 bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
 
-bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
+bullet.pm-continuous-splash-damage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
 
 bullet.pm-bombs-single = [stat]1[lightgray] bomb bullet/block:
 bullet.pm-bombs = [stat]{0}[lightgray] bomb bullets/block:
 
 bullet.pm-multi-splash = [stat]{0}[lightgray]x [stat]{1}[lightgray] area dmg ~ [stat]{2}[lightgray] tiles
+
+bullet.pm-target = [lightgray]To target:
 
 ##Block-specific Info
 
