--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -156,11 +156,11 @@ block.prog-mats-tinker.description = Launches strong sentry units that expire af
 block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.
+block.prog-mats-basic-sentry.description = A rapid fire sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.
+block.prog-mats-strike-sentry.description = A missile-launching sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.
+block.prog-mats-dash-sentry.description = A speedy charging sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 
 ## Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
