Minor description adjustments

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -164,44 +164,44 @@ block.prog-mats-dash-sentry.description = A speedy charging sentry unit.\nActiva
 
 ## Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
-block.prog-mats-arbalest.description = Fires extremely fast rockets at enemies.
-block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-arbalest.description = Fires extremely fast [gold]rockets[] at enemies.
+block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from the ancient past known as v5?
 ### Rockets
 block.prog-mats-empty-rocket.name = Rocket Shell
 block.prog-mats-empty-rocket.description = An empty rocket shell.
 block.prog-mats-basic-rocket.name = Basic Rocket
-block.prog-mats-basic-rocket.description = Fast moving, explodes on hit, dealing a lot of damage.\nUsed by [gold]arbalest[] turrets as ammo.
+block.prog-mats-basic-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage.
 block.prog-mats-incendiary-rocket.name = Incendiary Rocket
-block.prog-mats-incendiary-rocket.description = Fast moving, explodes on hit, dealing a lot of damage and causing fire.\nUsed by [gold]arbalest[] turrets as ammo.
+block.prog-mats-incendiary-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, explodes on hit, dealing a lot of damage and causing fire.
 block.prog-mats-bomber-rocket.name = Bomber Rocket
-block.prog-mats-bomber-rocket.description = Fast moving, drops bombs behind it that deal damage.\nUsed by [gold]arbalest[] turrets as ammo.
+block.prog-mats-bomber-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, drops bombs behind it that deal damage.
 
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
-block.prog-mats-firestorm.description = Fires barrages of small [red]arc missiles[] into the sky that land and explode on enemies.
+block.prog-mats-firestorm.description = Fires barrages of small [red]ballistic missiles[] into the sky that land and explode on enemies.
 block.prog-mats-firestorm.details = Sprite by VozDuh.
 block.prog-mats-strikedown.name = [red]Strikedown
-block.prog-mats-strikedown.description = Fires [red]arc missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
+block.prog-mats-strikedown.description = Fires [red]ballistic missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
 block.prog-mats-strikedown.details = Sprite by VozDuh.
 block.prog-mats-arbiter.name = [red]Trinity
-block.prog-mats-arbiter.description = Fires nuclear [red]arc missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
+block.prog-mats-arbiter.description = Fires nuclear [red]ballistic missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
 block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
-block.prog-mats-empty-missile.description = An empty missile shell.
+block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
 block.prog-mats-basic-missile.name = Basic Missile
-block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]strikedown[] missile turrets as ammo.
+block.prog-mats-basic-missile.description = A [red]ballistic missile[] used by [red]strikedown[] missile turrets. Explodes on landing, dealing a lot of damage.
 block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]strikedown[] missile turrets as ammo.
+block.prog-mats-recursive-missile.description = A [red]ballistic missile[] used by [red]strikedown[] missile turrets. Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
-block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
+block.prog-mats-empty-nuke.description = An empty nuclear [red]ballistic missile[] shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
-block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]trinity[] missile turrets as ammo.
+block.prog-mats-basic-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on landing, dealing a ton of damage.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]trinity[] missile turrets as ammo.
+block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Splits before landing, creating multiple impacts that deal a lot of damage.
 block.prog-mats-send-help.name = Sandbox Nuke
-block.prog-mats-send-help.description = Here comes the [red]B I G   B O O M[].\nUsed by [red]trinity[] missile turrets as ammo.\nSandbox only.
+block.prog-mats-send-help.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Here comes the [red]B I G   B O O M[].\nSandbox only.
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
@@ -281,7 +281,7 @@ block.prog-mats-system-booster.description = Increases the speed of buildings co
 block.prog-mats-system-booster.details = Use of this recommends that blocks that do not use power be replaced with ones that do.
 
 block.prog-mats-shield-projector.name = Shield Projector
-block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and tenelium used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]arc missiles[].
+block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and tenelium used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]ballistic missiles[].
 block.prog-mats-shield-projector.details = It's a square instead of a hexagon because I'm too lazy to calculate the right radius to make it fit alight perfectly.
 
 # Sandbox
