Better minigun spinup/spindown

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -40,12 +40,12 @@ block.prog-mats-blaze.description = Opens the ground under ground enemies, relea
 
 ## Minigun
 block.prog-mats-minigun.name = M-I-nigun
-block.prog-mats-minigun.description = It starts slow, but then i- DAKADAKADAKADAKADAKADAKADAKADAKA *ahem*\n\n[orange]Overdrive, reload multiplier, and coolant affect how fast it spins up. Reload multiplier affects max firing speed.
+block.prog-mats-minigun.description = Fires a stream of bullets at enemies. Ramps up in speed over time.
 block.prog-mats-miinigun.name = M-II-nigun
-block.prog-mats-miinigun.description = Two is better than one.\n\n[orange]Overdrive, reload multiplier, and coolant affect how fast it spins up. Reload multiplier affects max firing speed.
+block.prog-mats-miinigun.description = Fires two streams of bullets at enemies. Ramps up in speed over time.
 block.prog-mats-mivnigun.name = M-IV-nigun
-block.prog-mats-mivnigun.description = "Too much" simply doesn't exist in my dictionary.\n\n[orange]Overdrive, reload multiplier, and coolant affect how fast it spins up. Reload multiplier affects max firing speed.
-block.prog-mats-mivnigun.details = Don't ask me to make a "M-VIII-nigun."
+block.prog-mats-mivnigun.description = Fires four streams of bullets at enemies. Ramps up in speed over time.
+block.prog-mats-mivnigun.details = No, I will not make a "M-VIII-nigun."
 
 ## Geomancy
 block.prog-mats-concretion.name = Concretion
