Sword turret complete redo
Todo: Balancing

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -45,7 +45,7 @@ block.prog-mats-miinigun.name = M-II-nigun
 block.prog-mats-miinigun.description = Fires two streams of bullets at enemies. Ramps up in speed over time.
 block.prog-mats-mivnigun.name = M-IV-nigun
 block.prog-mats-mivnigun.description = Fires four streams of bullets at enemies. Ramps up in speed over time.
-block.prog-mats-mivnigun.details = No, I will not make a "M-VIII-nigun."
+block.prog-mats-mivnigun.details = No, I will not make a "M-VIII-nigun" or anything more.
 
 ## Geomancy
 block.prog-mats-concretion.name = Concretion
@@ -55,13 +55,13 @@ block.prog-mats-igneous-pillar.description = Explodes after a short delay. Spawn
 
 ## Blackhole
 block.prog-mats-blackhole.name = [purple]Kugelblitz
-block.prog-mats-blackhole.description = Fires small black holes that sucks in units and bullets.\n[red]WARNING: Black holes coming in contact of those of another team will cause a massive destructive cataclysm.
+block.prog-mats-blackhole.description = Fires small black holes that suck in units and bullets.\n[red]WARNING: Black holes coming in contact of those of another team will cause a massive destructive cataclysm.
 block.prog-mats-blackhole.details = Sprite based off of a sprite provided by Goober.
 
 ## Popeshadow
 block.prog-mats-excalibur.name = [yellow]Excalibur
-block.prog-mats-excalibur.description = The Holy [darkgray]Sword[] Laser [yellow]Excalibur[] fires cross-shaped lasers.\n\nAlso known as [yellow]Popeshadow[].
-block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.
+block.prog-mats-excalibur.description = Fires massive cross-shaped lasers.
+block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.\n\nAlso known as [yellow]Popeshadow[].
 
 ## Vaccinator
 block.prog-mats-vaccinator.name = [red]Vaccinator
@@ -83,11 +83,13 @@ block.prog-mats-sentinel.details = Anxiety piano not included.
 
 ## Sword
 block.prog-mats-dance.name = [crimson]Dance
-block.prog-mats-dance.description = Controls a ring of flying swords to stab enemies.
+block.prog-mats-dance.description = Controls flying swords to slice enemies.
 block.prog-mats-dance.details = Sword opacity setting can be found in PM settings.
-block.prog-mats-ball.name = [crimson]Ball
-block.prog-mats-ball.description = Controls a ring of large flying swords to stab enemies.
+unit.prog-mats-dance-sword.name = [crimson]Dance Sword
+block.prog-mats-ball.name = [crimson]Masquerade
 block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.
+block.prog-mats-ball.description = Controls large flying swords to slice enemies.
+unit.prog-mats-ball-sword.name = [crimson]Masquerade Sword
 
 ## Anime Sweep Laser
 block.prog-mats-incision.name = Incision
