Update sword sprites

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -87,8 +87,8 @@ block.prog-mats-dance.description = Controls flying swords to slice enemies.
 block.prog-mats-dance.details = Sword opacity setting can be found in PM settings.
 unit.prog-mats-dance-sword.name = [crimson]Dance Sword
 block.prog-mats-ball.name = [crimson]Masquerade
-block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.
 block.prog-mats-ball.description = Controls large flying swords to slice enemies.
+block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.\nSword sprite by ThirstyBoi.
 unit.prog-mats-ball-sword.name = [crimson]Masquerade Sword
 
 ## Anime Sweep Laser
@@ -483,7 +483,7 @@ setting.pm-farting.description = Restart required to apply changes.\n[gray](also
 ## Mod
 
 mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]
-mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (Eruptor sprite)
+mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (Eruptor sprite + Masquerade sword)
 mod.prog-mats-contributor.1 = [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)
 mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (Missile turret sprites, new icon)
 mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (Luminocity damage ramping)
