Sprite + Name/Description

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -321,6 +321,11 @@ block.prog-mats-multi-source-void.name = Dual Souoid
 block.prog-mats-multi-source-void.description = Infinitely outputs items and liquids [red]and[] destroys any items and removes any liquids.\nSandbox only.
 block.prog-mats-multi-source-void.details = U N L I M I T E D   P O W E R
 
+block.prog-mats-infini-mender.name = Configurable Mender
+block.prog-mats-infini-mender.description = Periodically repairs blocks in its vicinity.\nRepair time and range can be configured.\nSandbox only.
+block.prog-mats-infini-overdrive.name = Configurable Overdriver
+block.prog-mats-infini-overdrive.description = Increases the speed of nearby buildings.\nSpeed boost and range can be configured.\nSandbox only.
+
 
 ## Units
 
