--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories{
 
 ext{
     mindustryVersion = 'v137'
+    mindustryHash = '385af57d1b'
+    arcHash = 'd3b6ab563b'
     jabelVersion = "0.7.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
@@ -28,11 +30,14 @@ allprojects{
 
 dependencies{
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
-    //compileOnly "com.github.Anuken.MindustryJitpack:core:69f0126eca"
-    //compileOnly "com.github.Anuken.Arc:arc-core:b1b88883e2"
+    //Release
+    //compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    //compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+
+    //BE
+    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryHash"
+    compileOnly "com.github.Anuken.Arc:arc-core:$arcHash"
 }
 
 task jarAndroid{
