--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ task moveDesktop doFirst{
     exec{
         workingDir "$rootDir"
         if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")){
-            println "Yeeting PM to the shadow realm."
+            println "Yeeting PM to the shadow realm..."
             commandLine("cmd", "/C", "move", "/Y", "build\\libs\\ProgMatsDesktop.jar", "%userprofile%\\AppData\\Roaming\\Mindustry\\mods")
         }else{
             println "This task was made only for Windows. If you are a mac user, please PR the proper command to yeet PM into the mods folder."
