Finish Sentinel resprite
Update Sentinel description

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -78,8 +78,7 @@ block.prog-mats-attraction.description = Fires magnets that pull themselves towa
 
 ## Anxiety
 block.prog-mats-sentinel.name = [sky]Sentinel
-block.prog-mats-sentinel.description = Fires powerful energy blasts with a massive explosion. Very slow reload. Displays an aiming laser to give targets anxiety.
-block.prog-mats-sentinel.details = Anxiety piano not included.
+block.prog-mats-sentinel.description = Fires powerful explosive laser bolts over long distances.
 
 ## Sword
 block.prog-mats-dance.name = [crimson]Dance
