Improve sandbox wall appearance
Also made the code cleaner - No more new class just for the modes, now just a byte[].

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,3 @@
-# suppress inspection "UnusedProperty" for whole file
-
 # Item
 
 item.prog-mats-techtanite.name = Tenelium
@@ -465,6 +463,11 @@ pm-size.medium.amount = [accent]Medium Mounts: [lightgray]{0}
 pm-size.large.short = L
 pm-size.large.full = Large
 pm-size.large.amount = [accent]Large Mounts: [lightgray]{0}
+
+pm-sandbox-wall-mode.sparking = Sparking
+pm-sandbox-wall-mode.reflecting = Reflecting
+pm-sandbox-wall-mode.insulating = Insulation
+pm-sandbox-wall-mode.DPS-testing = DPS Testing
 
 ## Settings
 
