--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies{
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    
+    //flabel v138 is broken, yay!
+    compileOnly "com.github.Anuken.Arc:flabel:v137"
 
     //compileOnly "com.github.Anuken.MindustryJitpack:core:69f0126eca"
     //compileOnly "com.github.Anuken.Arc:arc-core:b1b88883e2"
