--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies{
     //Release
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    
+    //flabel v138 is broken, yay!
+    compileOnly "com.github.Anuken.Arc:flabel:v137"
 
     //BE
     //compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryHash"
