Remove lerp + Fix bundle

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -302,8 +302,8 @@ block.prog-mats-sandbox-wall.description = Protects structures from enemy projec
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
 block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
 
-block.prog-mats-infinit-heater.name = Configurable Heat Source
-block.prog-mats-infinit-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
+block.prog-mats-infini-heater.name = Configurable Heat Source
+block.prog-mats-infini-heater.description = Infinitely produces heat.\nHeat output can be configured.\nSandbox only.
 
 block.prog-mats-god-factory.name = Flarogus Factory
 block.prog-mats-god-factory.description = Produces Flarogus.\nSandbox only.
