--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -289,13 +289,10 @@ block.prog-mats-everything-liquid-source.description = Infinitely outputs all li
 
 block.prog-mats-rainbow-power-node.name = Rainbow Power Node
 block.prog-mats-rainbow-power-node.description = Better than the average power node. Also is rainbowy.\nSandbox only.
-block.prog-mats-rainbow-power-node.details = SPREAD THE GAY POWER!
 block.prog-mats-rainbow-power-source.name = Rainbow Power Source
 block.prog-mats-rainbow-power-source.description = Better than the average power source. Also is rainbowy.\nSandbox only.
-block.prog-mats-rainbow-power-source.details = CREATE THE GAY POWER!
 block.prog-mats-rainbow-power-boost.name = Rainbow Power Boost Source
 block.prog-mats-rainbow-power-boost.description = Like the rainbow power source, but everything in its power system gets boosted.\nSandbox only.
-block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
 block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
@@ -475,12 +472,15 @@ pm-sandbox-wall-mode.DPS-testing = DPS Testing
 ## Settings
 
 setting.pm-title = Progression Ministry
+setting.pm-graphics-settings.name = Graphics Settings
 setting.pm-sword-opacity.name = Sword Opacity
 setting.pm-zone-opacity.name = Zone Opacity
-setting.pm-strobespeed.name = Sandbox Block Strobe Speed
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
+setting.pm-sandbox-settings.name = Sandbox Settings
+setting.pm-strobespeed.name = Sandbox Block Strobe Speed
 setting.pm-sandbox-everything.name = Enable sandbox turret "Chaos" and sandbox unit "Death"
 setting.pm-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
+setting.pm-other-settings.name = Other Settings
 setting.pm-farting.name = Funi Mode :)
 setting.pm-farting.description = Restart required to apply changes.
 
