Missile Sprites + Proper Drawing
oho it looks so good

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -176,9 +176,8 @@ block.prog-mats-bomber-rocket.name = Bomber Rocket
 block.prog-mats-bomber-rocket.description = A [gold]rocket[] used by [gold]arbalests[]. Fast moving, drops bombs behind it that deal damage.
 
 ## Missile
-block.prog-mats-strikedown.name = [red]Strikedown
-block.prog-mats-strikedown.description = Fires [red]ballistic missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
-block.prog-mats-strikedown.details = Sprite by VozDuh.
+block.prog-mats-artemis.name = [red]Artemis
+block.prog-mats-artemis.description = Fires [red]ballistic missiles[] into the sky that land and explode on targets. Can only target enemies beyond a large minimum distance.
 block.prog-mats-arbiter.name = [red]Trinity
 block.prog-mats-arbiter.description = Fires nuclear [red]ballistic missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
 block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.
