--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories{
 }
 
 ext{
-    mindustryVersion = 'v138'
+    mindustryVersion = 'v139'
     mindustryHash = '385af57d1b'
     arcHash = 'd3b6ab563b'
     jabelVersion = "0.7.0"
@@ -30,10 +30,7 @@ allprojects{
 dependencies{
     //Release
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    
-    //flabel v138 is broken, yay!
-    compileOnly "com.github.Anuken.Arc:flabel:v137"
+    compileOnly "com.github.anuken.mindustryjitpack:core:$mindustryVersion"
 
     //BE
     //compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryHash"
