--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ repositories{
 }
 
 ext{
-    mindustryVersion = 'v138'
+    mindustryVersion = 'v139'
+    mindustryHash = '385af57d1b'
+    arcHash = 'd3b6ab563b'
     jabelVersion = "0.7.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
@@ -29,10 +31,7 @@ allprojects{
 dependencies{
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    
-    //flabel v138 is broken, yay!
-    compileOnly "com.github.Anuken.Arc:flabel:v137"
+    compileOnly "com.github.anuken.mindustryjitpack:core:$mindustryVersion"
 
     //compileOnly "com.github.Anuken.MindustryJitpack:core:69f0126eca"
     //compileOnly "com.github.Anuken.Arc:arc-core:b1b88883e2"
