--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -72,7 +72,7 @@ block.prog-mats-signal.description = Fires signal flares that attract the target
 
 ## Magnets
 block.prog-mats-attraction.name = Attraction
-block.prog-mats-attraction.description = Fires magnets that pull themselves towards targets.
+block.prog-mats-attraction.description = Fires magnets that pull themselves towards enemies.
 
 ## Anxiety
 block.prog-mats-sentinel.name = [sky]Sentinel
@@ -114,7 +114,7 @@ block.prog-mats-pinpoint.description = Fires a spark at enemy units, placing a t
 block.prog-mats-froth.name = Froth
 block.prog-mats-froth.description = Fires liquid at enemies. Automatically extinguishes fires when supplied with water.
 block.prog-mats-bifurcation.name = Bifurcation
-block.prog-mats-bifurcation.description = Fires pairs of lightning arcs at ground targets.
+block.prog-mats-bifurcation.description = Fires pairs of lightning arcs at ground enemies.
 block.prog-mats-iris.name = Iris
 block.prog-mats-iris.description = Fires seeking orbs at enemies.
 block.prog-mats-bandage.name = Bandage
@@ -131,7 +131,7 @@ block.prog-mats-vulcan.description = Fires close-range piercing blasts at nearby
 block.prog-mats-lotus.name = Lotus
 block.prog-mats-lotus.description = Fires bursts of homing lances at enemies.
 block.prog-mats-gravity.name = Gravity
-block.prog-mats-gravity.description = Fires up to six tractor beams that pulls in air targets, damaging them in the process.
+block.prog-mats-gravity.description = Fires up to six tractor beams that pulls in flying enemies, damaging them in the process.
 block.prog-mats-ambrosia.name = Ambrosia
 block.prog-mats-ambrosia.description = Fires healing fields at the closest damaged unit.
 block.prog-mats-dispel.name = Vigilance
@@ -177,26 +177,25 @@ block.prog-mats-bomber-rocket.description = A [gold]rocket[] used by [gold]arbal
 
 ## Missile
 block.prog-mats-artemis.name = [red]Artemis
-block.prog-mats-artemis.description = Fires [red]ballistic missiles[] into the sky that land and explode on targets. Can only target enemies beyond a large minimum distance.
-block.prog-mats-arbiter.name = [red]Trinity
-block.prog-mats-arbiter.description = Fires nuclear [red]ballistic missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
-block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.
+block.prog-mats-artemis.description = Launches long-range [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
+block.prog-mats-paragon.name = [red]Paragon
+block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
 ### Missiles
-block.prog-mats-empty-missile.name = Missile Shell
-block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
-block.prog-mats-basic-missile.name = Basic Missile
-block.prog-mats-basic-missile.description = A [red]ballistic missile[] used by [red]strikedown[] missile turrets. Explodes on landing, dealing a lot of damage.
-block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = A [red]ballistic missile[] used by [red]strikedown[] missile turrets. Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.
-block.prog-mats-empty-nuke.name = Nuclear Missile Shell
-block.prog-mats-empty-nuke.description = An empty nuclear [red]ballistic missile[] shell.
-block.prog-mats-basic-nuke.name = Basic Nuke
-block.prog-mats-basic-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on landing, dealing a ton of damage.
-block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
-block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Splits before landing, creating multiple impacts that deal a lot of damage.
-block.prog-mats-send-help.name = Sandbox Nuke
-block.prog-mats-send-help.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Here comes the [red]B I G   B O O M[].\nSandbox only.
+block.prog-mats-empty-missile-payload.name = Missile Shell
+block.prog-mats-empty-missile-payload.description = An empty [red]ballistic missile[] shell.
+block.prog-mats-basic-missile-payload.name = Basic Missile
+block.prog-mats-basic-missile-payload.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Explodes on impact, dealing a lot of splash damage.
+block.prog-mats-recursive-missile-payload.name = Recursive Missile
+block.prog-mats-recursive-missile-payload.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Splits twice in flight, creating multiple impacts that deal splash damage.
+block.prog-mats-empty-nuke-payload.name = Nuclear Missile Shell
+block.prog-mats-empty-nuke-payload.description = An empty nuclear [red]ballistic missile[] shell.
+block.prog-mats-basic-nuke-payload.name = Basic Nuke
+block.prog-mats-basic-nuke-payload.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on impact, dealing a ton of splash damage.
+block.prog-mats-basic-nuke-payload.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
+block.prog-mats-cluster-nuke-payload.name = Cluster Nuke
+block.prog-mats-cluster-nuke-payload.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage.
+block.prog-mats-sandbox-nuke-payload.name = Sandbox Nuke
+block.prog-mats-sandbox-nuke-payload.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
@@ -209,11 +208,11 @@ block.prog-mats-caliber.details = Random crits are fair and balanced.
 
 ## Tesla
 block.prog-mats-shock.name = [#F3E979]Shock
-block.prog-mats-shock.description = Zaps a few random targets in range.
+block.prog-mats-shock.description = Zaps a few random enemies in range.
 block.prog-mats-spark.name = [#F3E979]Spark
-block.prog-mats-spark.description = Zaps many random targets in range.
+block.prog-mats-spark.description = Zaps many random enemies in range.
 block.prog-mats-storm.name = [#F3E979]Storm
-block.prog-mats-storm.description = Zaps numerous random targets in range.
+block.prog-mats-storm.description = Zaps numerous random enemies in range.
 
 ##Apotheosis
 block.prog-mats-apotheosis-nexus.name = [#CE5EE5]Apotheosis Nexus
