--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -181,21 +181,21 @@ block.prog-mats-artemis.description = Launches long-range [red]ballistic missile
 block.prog-mats-paragon.name = [red]Paragon
 block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] with a constant flight times at enemies. Can only target enemies beyond a large minimum distance.
 ### Missiles
-block.prog-mats-empty-missile-payload.name = Missile Shell
-block.prog-mats-empty-missile-payload.description = An empty [red]ballistic missile[] shell.
-block.prog-mats-basic-missile-payload.name = Basic Missile
-block.prog-mats-basic-missile-payload.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Explodes on impact, dealing a lot of splash damage.
-block.prog-mats-recursive-missile-payload.name = Recursive Missile
-block.prog-mats-recursive-missile-payload.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Splits twice in flight, creating multiple impacts that deal splash damage.
-block.prog-mats-empty-nuke-payload.name = Nuclear Missile Shell
-block.prog-mats-empty-nuke-payload.description = An empty nuclear [red]ballistic missile[] shell.
-block.prog-mats-basic-nuke-payload.name = Basic Nuke
-block.prog-mats-basic-nuke-payload.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on impact, dealing a ton of splash damage.
-block.prog-mats-basic-nuke-payload.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
-block.prog-mats-cluster-nuke-payload.name = Cluster Nuke
-block.prog-mats-cluster-nuke-payload.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage.
-block.prog-mats-sandbox-nuke-payload.name = Sandbox Nuke
-block.prog-mats-sandbox-nuke-payload.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
+block.prog-mats-empty-missile.name = Missile Shell
+block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
+block.prog-mats-basic-missile.name = Basic Missile
+block.prog-mats-basic-missile.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Explodes on impact, dealing a lot of splash damage.
+block.prog-mats-recursive-missile.name = Recursive Missile
+block.prog-mats-recursive-missile.description = A [red]ballistic missile[] used by [red]artemis[] missile launchers. Splits twice in flight, creating multiple impacts that deal splash damage.
+block.prog-mats-empty-nuke.name = Nuclear Missile Shell
+block.prog-mats-empty-nuke.description = An empty nuclear [red]ballistic missile[] shell.
+block.prog-mats-basic-nuke.name = Basic Nuke
+block.prog-mats-basic-nuke.description = A [red]ballistic missile[] used by [red]trinity[] missile turrets. Explodes on impact, dealing a ton of splash damage.
+block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
+block.prog-mats-cluster-nuke.name = Cluster Nuke
+block.prog-mats-cluster-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Splits in flight, creating multiple impacts that deal a lot of splash damage.
+block.prog-mats-sandbox-nuke.name = Sandbox Nuke
+block.prog-mats-sandbox-nuke.description = A [red]ballistic missile[] used by [red]paragon[] missile launchers. Here comes the [red]B I G   B O O M[].\nSandbox only. (Only in payload source.)
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
